United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6875329 fix for 6795465 broke exception handler cloning
6875329 : fix for 6795465 broke exception handler cloning

Details
Type:
Bug
Submit Date:
2009-08-24
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
solaris_9
Sub-Component:
compiler
CPU:
sparc
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs17
Fixed Versions:
hs17

Related Reports
Backport:
Backport:
Backport:
Backport:

Sub Tasks

Description
The fix for 6795465 rearranged some state_for calls such that the forced cloning of exception handlers was in the wrong place.  The fix is to maintain the original ordering.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/master/rev/fdfb4ce4a1dd
                                     
2009-09-04
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/baseline/rev/fdfb4ce4a1dd
                                     
2009-09-02
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/cdb8b7c37ac1
                                     
2009-08-25



Hardware and Software, Engineered to Work Together