6875329: fix for 6795465 broke exception handler cloning

Reviewed-by: kvn